MDEV-18098 Crash after rollback of instant DROP COLUMN

dict_table_t::rollback_instant(): Restore dict_index_t::n_core_fields.